--- a/Changelog
+++ b/Changelog
@@ -1,8 +1,12 @@
-yoshimi 1.3.6.1
+yoshimi 1.3.6 M
 
-2015-10-2 Will
-- Set up bugfix branch to track only the current release.
-- Set version to 1.3.6.1
+2015-10-7 Will
+- Brought Andrew's thread and readline into older style command line.
+- Further enhancements.
+
+2015-10-6 Will (command)
+- Improved readline exit behaviour.
+- Added exit command.
 
 2015-10-5 Will
 - Further improvements to command line control.
@@ -12,6 +16,10 @@ yoshimi 1.3.6.1
 - More improvements to command line control.
 - Extended command line vector control.
 - Auto generate .config/yoshimi/presets directory.
+
+2015-10-2 Will
+- Set up bugfix branch to track only the current release.
+- Set version of this to 1.3.6.1
 
 2015-10-1 Will
 - First time config search was getting confused if zyn or old style
